section menu overlapping issue fixed

--- a/tetrapak-publicweb/ui.dev/src/source/templates/components/navigation/_navigation.scss
+++ b/tetrapak-publicweb/ui.dev/src/source/templates/components/navigation/_navigation.scss
@@ -138,6 +138,9 @@
     @media #{$small-desktop} {
         &__container {
             .list-section-menu-links {
+                &.align-right {
+                    justify-content: flex-end;
+                }
                 & > li {
                     @include margin(0 6px);
                 }
